# zephyr-gptp

./: CMakeLists.txt  main.c
gptp/: gptp.c  gptp_messages.c  gptp_messages.h  gptp_mi.c  gptp_private.h  gptp_state.h  gptp_user_api.c
include/logging/: log.h
include/net/: gptp.h  ptp_time.h
